<resources>
    <string name="app_name">3DVision</string>
    <string name="main1">button</string>
    <string name="privacy_exit">Exit</string>
    <string name="funShare">share</string>
    <string name="funDel">delete</string>
    <string name="funExit">exit</string>
    <string name="privacy_agree">Agree</string>
    <string name="users_note">Users Note</string>
    <string name="trans">sss</string>
    <string name="action_settings">NULL</string>
    <string name="opt_privacy">Privacy Policy</string>
    <string name="opt_terms">User Terms</string>
    <string name="privacy_tips_key1">Terms of Use</string>
    <string name="privacy_tips_key2">Privacy Policy</string>
    <string name="copyRight">CopyRight@markdoge\n\n</string>
    <string name="privacy_tips">Welcome to 3DVision! In order to protect your privacy and use security, please read our Terms of Use and Privacy Policy carefully. Fomat your cam before use this app until you have confirmed your full understanding and agreement. Thank you!</string>
    <string name="privacy_context">If you want to use this app,please confirm the following roots:\n1.camera root\n2.file read and white root\n3.media record root\n\nthe icon:</string>
    <string name="privacy_context1">We use the mobtech sharesdk service of the third party \n(Shanghai Youkun Information Technology Co.Ltd. hereinafter referred to as "mobtech")\nto provide you with social sharing, third-party login social sharing and third-party login functions.</string>
    <string name="privacy_context2">To successfully implement this function, you need to authorize mobtechsdk to provide corresponding services; After your authorization, mobtech will collect your relevant personal information. The types and uses of information collected by mobtech, the rules for personal information protection and the withdrawal mechanism, etc</string>
    <string name="privacy_context3">See the privacy policy (www.mob.com/about/policy) or details.</string>
    <string name="user1">Terms of Use</string>
    <string name="user2">Welcome to use 3D vision. This software requires users to correct the lens before use to achieve the desired effect of the software. The following is the lens correction picture. Please download the pictures and print them on A4 paper, and shoot them with two rear lenses.\n\n</string>
    <string name="user3">click the photo to save it to your phone\n\n</string>
    <string name="user4">or use this picture to format your camera</string>
    <string name="packgeName">com.example.stereoscopicvsionandroid</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating...</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>
    <string name="calibrate_title1">Calibrate camera one</string>
    <string name="calibrate_title2">Calibrate camera two</string>
    <string name="calibrate_ext">back</string>
    <string name="user_check">understand</string>
    <string name="user_commit">I Agree</string>
    <string name="user5">How to calibrate your camera</string>
    <string name="user6">"keep the point photo in you screen and when colorful lines which in the point photo,tap your screen. Then move your phone to change the point photo just as the green windows in the following picture shows. "</string>
    <string name="user7">tap at least 20 times then tap the Calibrate button. After calculate you can see more operation in the list</string>
    <string name="user_alert">please select understand</string>
    <string name="main_alter">please agree Privacy Policy and User Terms</string>
    <string name="calibrate1">capture:  </string>
    <string name="calibrate2">Next Lens</string>
    <string name="calibrate3">Done!</string>
</resources>