<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/calibrate_num"
            android:title="@string/calibrate1"
            app:showAsAction="ifRoom|withText"/>
        <item
            android:id="@+id/calibrate"
            android:title="@string/action_calibrate"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/preview_mode"
            android:title="@string/preview_mode">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/calibration"
                        android:checked="true"
                        android:icon="@drawable/icon1"
                        android:title="@string/calibration" />
                    <item
                        android:id="@+id/undistortion"
                        android:icon="@drawable/icon2"
                        android:title="@string/undistortion" />
                    <item
                        android:id="@+id/comparison"
                        android:icon="@drawable/icon3"
                        android:title="@string/comparison" />
                </group>
            </menu>
        </item>
    </group>
</menu>
