<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/privacy_context"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ico_lancher"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            android:layout_marginRight="-100dp"
            android:id="@+id/myico"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/copyRight"
            android:textSize="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/privacy_context1"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/privacy_context2"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/privacy_context3"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:src="@mipmap/icon_ico"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            android:layout_marginRight="-100dp"
            android:id="@+id/mobtechico"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="253dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/check_pr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_check"
                android:textColor="@color/black"
                android:textSize="10dp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="\n"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_xxx"
            android:layout_gravity="center"
            android:text="@string/user_commit"
            android:textColor="@color/white"
            android:id="@+id/pr_commit"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="\n"/>
    </LinearLayout>
</ScrollView>