<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/user1"
            android:textSize="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackTrans"
            android:layout_gravity="center"
            android:text="@string/user2"
            android:textSize="15dp"/>
        <ImageButton
            android:layout_width="162dp"
            android:layout_height="108dp"
            android:src="@mipmap/stdmap"
            android:layout_gravity="center"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/user3"
            android:textColor="@color/black"
            android:layout_gravity="right"/>
        <Button
            android:id="@+id/lenFormat"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/user4"
            android:textColor="@color/whiteTrans"
            android:background="@drawable/btn_xxx"
            android:shadowColor="@color/grayTrans"/>




    </LinearLayout>
</ScrollView>